# chess

./: CMakeLists.txt  Todo  sourcelist
src/: ai.cc  ai.hh  bishoptest.cc  board.cc  board.hh  game.cc  game.hh  helper.cc  helper.hh  main.cc  parsing.cc  parsing.hh  pawntest.cc  perft-parser.cc  perft-parser.hh  perft.cc  perft.hh  tools.cc  tools.hh
src/given/: chessboard-interface.hh  pgn-move.cc  pgn-move.hh  pgn-parser.cc  pgn-parser.hh  piece-type.hh  position.hh  position.hxx
src/given/tests/: king_indian_attack.pgn
src/tests/: bishoptest.hh  evaluate.hh  fen-input.txt  kingtest.hh  knighttest.hh  pawntest.hh  pos2.perft  pos22.perft  pos5.perft  queentest.hh  rooktest.hh  specialtest.hh  test.cc
src/tests/perft/: edwards1.perft  pos3.perft  pos32.perft  pos42_black.perft  pos4_black.perft  pos52.perft  pos6.perft  pos62.perft  test1  test2  test4
